feat: atualiza a atividade página simples

--- a/Desenvolvimento Front-End/HTML - Página Simples/contato.html
+++ b/Desenvolvimento Front-End/HTML - Página Simples/contato.html
@@ -13,14 +13,13 @@
   <!-- Cabeçalho do site -->
   <header>
     <nav>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="contato.html">Contato</a>
-        </li>
-      </ul>
+      <header>
+        <nav>
+                <a>Victor's Portfolio</a>
+                <a href="index.html">Home</a>
+                <a href="contato.html">Contato</a>
+        </nav>
+      </header>
     </nav>
   </header>
   <hr>
@@ -33,15 +32,15 @@
         <h1>Entre em contato</h1>
         <form>
           <p>
-            <label for="name">Nome</label>
+            <label for="name">Nome</label> <br>
             <input name="name" type="text" id="name">
           </p>
           <p>
-            <label for="email">E-mail</label>
+            <label for="email">E-mail</label> <br>
             <input name="email" type="email" id="email">
           </p>
           <p>
-            <label for="message">Mensagem</label>
+            <label for="message">Mensagem</label> <br>
             <textarea name="message" id="message" cols="30" rows="3"></textarea>
           </p>
           <p>
@@ -50,16 +49,11 @@
         </form>
       </div>
       <div>
+        <h3>Endereço de trabalho</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.027577572313!2d-43.17620408603459!3d-22.91235364382775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9981d8ad73b6d3%3A0xf080348218997576!2sIbmec%20Centro!5e0!3m2!1spt-BR!2sbr!4v1667921831201!5m2!1spt-BR!2sbr"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QMUQjjjokqY" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
       </div>
     </section>
   </main>
@@ -69,24 +63,13 @@
   <hr>
   <footer>
     <div>
-      <a target="_blank" href="https://www.linkedin.com/in/dsmanhaes/">
-        <img width="50" src="assets/images/linkedin.webp" alt="linkedin">
-      </a>
-      <a target="_blank" href="https://github.com/dsmanhaes">
-        <img width="50" src="assets/images/github.webp" alt="github">
-      </a>
-      <a target="_blank" href="https://www.facebook.com/dsmanhaes/">
-        <img width="50" src="assets/images/facebook.webp" alt="facebook">
-      </a>
-      <a target="_blank" href="https://www.instagram.com/ds_manhaes/">
-        <img width="50" src="assets/images/instagram.webp" atl="instagram">
-      </a>
-    </div>
-    <div>
-      <p>
-        Diogo Manhães - Desenvolvedor Fullstack - Todos os direitos reservados
-      </p>
-    </div>
+    </a>
+  </div>
+  <div>
+    <p>
+      Victor Antonino - Desenvolvedor Fullstack - Todos os direitos reservados
+    </p>
+  </div>
   </footer>
   <!-- /Rodapé do site -->
 </body>
