--- a/Desenvolvimento Front-End/HTML - Página Simples/index.html
+++ b/Desenvolvimento Front-End/HTML - Página Simples/index.html
@@ -6,16 +6,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Victor's portfolio</title>
 </head>
 
 <body>
   <!-- Cabeçalho do site -->
   <header>
     <nav>
-        <a align="left" style="color:white">Victor's Page</a>
-        <a align="right" style="color:green" href="index.html">Home</a>
-        <a align="right" style="color:green" href="contato.html">Contato</a>
+            <a>Victor's Portfolio</a>
+            <a href="index.html">Home</a>
+            <a href="contato.html">Contato</a>
     </nav>
   </header>
   <hr>
@@ -25,28 +25,65 @@
   <main>
     <section>
       <div>
-        <body style="background-color:darkslateblue;"></body>
-        <h1 style="color:white">Hello, I am Victor, Thanks for visiting my page!</h1>
+        <h1>Victor Antonino Costa</h1>
+        <h3>Desenvolvedor Full Stack - Rio de Janeiro, Brasil</h3>
         <p>
-          <b>Full Stack Developer living in Rio de Janeiro, Brazil</b>
-        </p>
+          Sou estudante de Ciência da Computação pela Universidade Veiga de Almeida. Dentro da Universidade já atuei 
+          como monitor em turmas de calouros na matéria de bases de programação e como coordenador de esportes na atlética de computação.
         <p>
-          Well, since i was a child i always have been passionate about games and everything
-          that involved science. So, because of this passions at the 17 age i entered 
-          computer science college and i had my first contact with programming,
-          using the C languange and i fell in love about it, even was not have
-          the best expirence, but I always tried to learn more and more.
-        </p>
-        <p>
-          I am currently part of the Programadores Cariocas project, a program run by the city
-          of Rio de Janeiro that seeks young people in economic vulnerability to teach them how
-          to take their first steps in a developer career. Through the program I was able to participate in the
-          full-stack bootcamp (Javascript) at Generation Brazil where I collaborated in the classroom as a monitor and class representative
+          Atualmente participo do projeto Programadores Cariocas, se trata de uma iniciativa da prefeitura do Rio de Janeiro 
+          que oferece vagas em cursos na área de desenvolvimento WEB, com prioridade para jovens em situação de
+          vulnerabilidade socioeconômica. A partir deste projeto pude participar como aluno do bootcamp full-stack (javascript)
+          da Generation Brasil, onde também colaboro como monitor e representante de turma.
         </p>
       </div>
-      <div>
-        <img width="800" src="https://camo.githubusercontent.com/326e2023de2253ba8e63f95dec8193a36e03e0b0d7ba6726675d909a4108b779/68747470733a2f2f692e696d6775722e636f6d2f3865745248596b2e706e67" alt="Casa na floresta">
-      </div>
+
+      <h2> Onde me encontrar </h2>
+  
+<a href="https://github.com/Anttonino"> <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"> </a>
+<a href="https://www.linkedin.com/in/victor-antonino-085175210/"> <img src="https://img.shields.io/badge/linkedin-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white"> </a> 
+<a href="mailto:victor.antonino12@gmail.com"> <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white"> </a>
+<a href="https://open.spotify.com/user/ye3vzobk38hksrcztoe0eb59r"> <img src="https://img.shields.io/badge/Spotify-1ED760?&style=for-the-badge&logo=spotify&logoColor=white"> </a>
+<a href="https://www.instagram.com/victor_antonino__/"> <img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white"> </a>
+<a href="https://www.strava.com/athletes/62692246"> <img src="https://img.shields.io/badge/Strava-FC4C02?style=for-the-badge&logo=strava&logoColor=white"> </a>
+<a href="https://psnprofiles.com/Victor-Antheos"> <img src="https://img.shields.io/badge/PlayStation-003791?style=for-the-badge&logo=playstation&logoColor=white"> </a>
+    
+  <h2>Tecnologias</h2>
+    <div>
+      <a href="https://skillicons.dev">
+      <img src="https://skillicons.dev/icons?i=c,javascript,typescript,html,css,git,github,nodejs,express,nest,mysql,react,figma,vscode " />
+      </a>
+    </p>
+  </div>
+  <div>
+    <h2>Projetos</h2>
+    <a href="https://github.com/Anttonino/bootcamp-generation">
+    <img src="https://camo.githubusercontent.com/326e2023de2253ba8e63f95dec8193a36e03e0b0d7ba6726675d909a4108b779/68747470733a2f2f692e696d6775722e636f6d2f3865745248596b2e706e67"
+     width="400px"
+     style="
+     border-radius: 20px;
+     box-shadow: 3px 3px black;
+     ">
+     </a>
+     <a href="https://github.com/Anttonino/sistema-de-cadastros">
+     <img src="https://camo.githubusercontent.com/1093b432e83f537c6c08e8ef186499ed368b29beb134254451f94185d9e96ba6/68747470733a2f2f692e696d6775722e636f6d2f524778314f71642e706e67" 
+      width="400px"
+      style="
+      border-radius: 20px;
+      box-shadow: 3px 3px grey;
+      border-color: black;
+     ">
+     </a>
+    <a href="https://github.com/green-heart">
+      <img src="https://github.com/green-heart/.github/raw/main/profile/images/Green%20heart.png?raw=true" 
+      width="400px"
+      style="
+      border-radius: 20px;
+      box-shadow: 3px 3px #10360F;
+      border-color: black;
+      ">
+    </a>
+  </div>
     </section>
   </main>
   <!-- /Corpo principal do site -->
@@ -55,22 +92,11 @@
   <hr>
   <footer>
     <div>
-      <a target="_blank" href="https://www.linkedin.com/in/dsmanhaes/">
-        <img width="50" src="assets/images/linkedin.webp" alt="linkedin">
-      </a>
-      <a target="_blank" href="https://github.com/dsmanhaes">
-        <img width="50" src="assets/images/github.webp" alt="github">
-      </a>
-      <a target="_blank" href="https://www.facebook.com/dsmanhaes/">
-        <img width="50" src="assets/images/facebook.webp" alt="facebook">
-      </a>
-      <a target="_blank" href="https://www.instagram.com/ds_manhaes/">
-        <img width="50" src="assets/images/instagram.webp" atl="instagram">
       </a>
     </div>
     <div>
       <p>
-        Diogo Manhães - Desenvolvedor Fullstack - Todos os direitos reservados
+        Victor Antonino - Desenvolvedor Fullstack - Todos os direitos reservados
       </p>
     </div>
   </footer>
